ws: Fix ime/mouse event ack ordering issue

Track in-flight key events separately from others in WindowTree.
(client may ack key events out-of-order from others, for async IME)

Add a simple test of OnWindowInputEventAck behavior.

Bug: 884368
Test: Moving a mouse while pressing an accelerator with KSV window focused.
Change-Id: I7d76ce1aec2ef311f5e721903d40e1b3819e2953
Reviewed-on: https://chromium-review.googlesource.com/1229074
Commit-Queue: Michael Wasserman <msw@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592107}
Former-commit-id: d867f894e43126caaa58790138f456536a9a5334